--- a/app/src/main/res/layout/activity_lista_eleitor.xml
+++ b/app/src/main/res/layout/activity_lista_eleitor.xml
@@ -6,6 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".activity.ListaEleitor">
 
+    <include layout="@layout/activity_content_lista_eleitor" />
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="57dp"
