--- a/app/src/main/res/layout/activity_lista_candidato.xml
+++ b/app/src/main/res/layout/activity_lista_candidato.xml
@@ -6,4 +6,21 @@
     android:layout_height="match_parent"
     tools:context=".activity.ListaCandidato">
 
+
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="57dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="24dp"
+        android:layout_marginEnd="36dp"
+        android:layout_marginStart="8dp"
+        android:clickable="true"
+        android:src="@android:drawable/ic_input_add"
+        app:backgroundTint="@android:color/background_dark"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:rippleColor="@android:color/background_dark" />
 </android.support.constraint.ConstraintLayout>
