--- a/app/src/main/res/layout/activity_eleitor_detalhe.xml
+++ b/app/src/main/res/layout/activity_eleitor_detalhe.xml
@@ -37,7 +37,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tvCadastro_Eleitor" />
 
     <EditText
-        android:id="@+id/txtNomeEleitor"
+        android:id="@+id/txtNomeCandidato"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -51,7 +51,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tvInstrucoes" />
 
     <EditText
-        android:id="@+id/txtNomeMaeEleitor"
+        android:id="@+id/txtNomeMaeCandidato"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -62,10 +62,10 @@
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtNomeEleitor" />
+        app:layout_constraintTop_toBottomOf="@+id/txtNomeCandidato" />
 
     <EditText
-        android:id="@+id/txtNumeroTituloEleitor"
+        android:id="@+id/txtCargoCandidato"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -77,10 +77,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtDataEleitor" />
+        app:layout_constraintTop_toBottomOf="@+id/txtNumeroUrna" />
 
     <EditText
-        android:id="@+id/txtDataEleitor"
+        android:id="@+id/txtNumeroUrna"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -89,10 +89,10 @@
         android:hint="Data Nascimento"
         android:inputType="date"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtNomeMaeEleitor" />
+        app:layout_constraintTop_toBottomOf="@+id/txtNomeMaeCandidato" />
 
     <EditText
-        android:id="@+id/txtZonaEleitor"
+        android:id="@+id/txtVotosCandidato"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -103,10 +103,10 @@
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtNumeroTituloEleitor" />
+        app:layout_constraintTop_toBottomOf="@+id/txtCargoCandidato" />
 
     <EditText
-        android:id="@+id/txtCidadeEleitor"
+        android:id="@+id/txtCidadeCandidato"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -118,7 +118,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtZonaEleitor" />
+        app:layout_constraintTop_toBottomOf="@+id/txtVotosCandidato" />
 
     <EditText
         android:id="@+id/txtSecaoEleitor"
@@ -132,8 +132,8 @@
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/txtCidadeEleitor"
-        app:layout_constraintTop_toBottomOf="@+id/txtZonaEleitor" />
+        app:layout_constraintStart_toEndOf="@+id/txtCidadeCandidato"
+        app:layout_constraintTop_toBottomOf="@+id/txtVotosCandidato" />
 
     <Button
         android:id="@+id/btnSalvar"
@@ -145,11 +145,11 @@
         android:text="Salvar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtCidadeEleitor" />
+        app:layout_constraintTop_toBottomOf="@+id/txtCidadeCandidato" />
 
     <Button
         android:id="@+id/btnAlterar"
-        android:layout_width="168dp"
+        android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
@@ -159,7 +159,7 @@
 
     <Button
         android:id="@+id/btnExcluir"
-        android:layout_width="165dp"
+        android:layout_width="181dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
