--- a/app/src/main/res/layout/activity_item_eleitor.xml
+++ b/app/src/main/res/layout/activity_item_eleitor.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="2dp"
-    app:cardBackgroundColor="@android:color/transparent"
+    app:cardBackgroundColor="@android:color/white"
     app:cardCornerRadius="05dp"
     app:cardElevation="5dp"
     app:contentPadding="5dp">
